feat: enforce consistent code formatting config- Add Black/Ruff config to pyproject.toml- Update Makefile format commands to use config- Enhance pre-commit hooks with Ruff format- Removed circular dependencies- Standardize exclude patterns across tools- Fixed various redefinitions and commented out unused variables

--- a/notebooks/adalflow_colab_template.ipynb
+++ b/notebooks/adalflow_colab_template.ipynb
@@ -87,8 +87,8 @@
     "\n",
     "\n",
     "# Set environment variables\n",
-    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
-    "os.environ['GROQ_API_KEY'] = groq_api_key\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
+    "os.environ[\"GROQ_API_KEY\"] = groq_api_key\n",
     "\n",
     "print(\"API keys have been set.\")"
    ]
