--- a/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
+++ b/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
@@ -137,12 +137,14 @@
     "\n",
     "# Prompt user to enter their API keys securely\n",
     "openai_api_key = getpass(\"Please enter your OpenAI API key: \")\n",
-    "groq_api_key = getpass(\"Please enter your GROQ API key, simplly press Enter if you don't have one: \")\n",
+    "groq_api_key = getpass(\n",
+    "    \"Please enter your GROQ API key, simplly press Enter if you don't have one: \"\n",
+    ")\n",
     "\n",
     "\n",
     "# Set environment variables\n",
-    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
-    "os.environ['GROQ_API_KEY'] = groq_api_key\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
+    "os.environ[\"GROQ_API_KEY\"] = groq_api_key\n",
     "\n",
     "print(\"API keys have been set.\")"
    ]
@@ -209,6 +211,7 @@
     "<END_OF_USER>\n",
     "\"\"\"\n",
     "\n",
+    "\n",
     "class ObjectCountTaskPipeline(adal.Component):\n",
     "    def __init__(self, model_client: adal.ModelClient, model_kwargs: Dict):\n",
     "        super().__init__()\n",
@@ -242,9 +245,7 @@
     "        self, question: str, id: str = None\n",
     "    ) -> Union[adal.GeneratorOutput, adal.Parameter]:\n",
     "        output = self.llm_counter(prompt_kwargs={\"input_str\": question}, id=id)\n",
-    "        return output\n",
-    "\n",
-    "\n"
+    "        return output"
    ]
   },
   {
@@ -329,44 +330,42 @@
     "from adalflow.components.model_client.groq_client import GroqAPIClient\n",
     "\n",
     "\n",
-    "if len(os.environ['OPENAI_API_KEY']) > 1:\n",
-    "  gpt_3_model = {\n",
-    "      \"model_client\": OpenAIClient(),\n",
-    "      \"model_kwargs\": {\n",
-    "          \"model\": \"gpt-3.5-turbo\",\n",
-    "          \"max_tokens\": 2000,\n",
-    "          \"temperature\": 0.0,\n",
-    "          \"top_p\": 0.99,\n",
-    "          \"frequency_penalty\": 0,\n",
-    "          \"presence_penalty\": 0,\n",
-    "          \"stop\": None,\n",
-    "      },\n",
-    "  }\n",
-    "  gpt_4o_model = {\n",
-    "      \"model_client\": OpenAIClient(),\n",
-    "      \"model_kwargs\": {\n",
-    "          \"model\": \"gpt-4o\",\n",
-    "          \"max_tokens\": 4000,\n",
-    "          \"temperature\": 0.0,\n",
-    "          \"top_p\": 0.99,\n",
-    "          \"frequency_penalty\": 0,\n",
-    "          \"presence_penalty\": 0,\n",
-    "          \"stop\": None,\n",
-    "      },\n",
-    "  }\n",
+    "if len(os.environ[\"OPENAI_API_KEY\"]) > 1:\n",
+    "    gpt_3_model = {\n",
+    "        \"model_client\": OpenAIClient(),\n",
+    "        \"model_kwargs\": {\n",
+    "            \"model\": \"gpt-3.5-turbo\",\n",
+    "            \"max_tokens\": 2000,\n",
+    "            \"temperature\": 0.0,\n",
+    "            \"top_p\": 0.99,\n",
+    "            \"frequency_penalty\": 0,\n",
+    "            \"presence_penalty\": 0,\n",
+    "            \"stop\": None,\n",
+    "        },\n",
+    "    }\n",
+    "    gpt_4o_model = {\n",
+    "        \"model_client\": OpenAIClient(),\n",
+    "        \"model_kwargs\": {\n",
+    "            \"model\": \"gpt-4o\",\n",
+    "            \"max_tokens\": 4000,\n",
+    "            \"temperature\": 0.0,\n",
+    "            \"top_p\": 0.99,\n",
+    "            \"frequency_penalty\": 0,\n",
+    "            \"presence_penalty\": 0,\n",
+    "            \"stop\": None,\n",
+    "        },\n",
+    "    }\n",
     "\n",
-    "if len(os.environ['GROQ_API_KEY']) > 1:\n",
-    "  llama_3_1_model ={\n",
-    "      \"model_client\": GroqAPIClient(),\n",
-    "      \"model_kwargs\": {\n",
-    "          \"model\": \"llama-3.1-8b-instant\"\n",
-    "      }\n",
-    "  }\n",
+    "if len(os.environ[\"GROQ_API_KEY\"]) > 1:\n",
+    "    llama_3_1_model = {\n",
+    "        \"model_client\": GroqAPIClient(),\n",
+    "        \"model_kwargs\": {\"model\": \"llama-3.1-8b-instant\"},\n",
+    "    }\n",
     "\n",
     "\n",
     "question = \"I have a flute, a piano, a trombone, four stoves, a violin, an accordion, a clarinet, a drum, two lamps, and a trumpet. How many musical instruments do I have?\"\n",
     "task_pipeline = ObjectCountTaskPipeline(**gpt_3_model)\n",
-    "print(task_pipeline)\n"
+    "print(task_pipeline)"
    ]
   },
   {
@@ -467,6 +466,7 @@
     "from adalflow.datasets.big_bench_hard import BigBenchHard\n",
     "from adalflow.utils.data import subset_dataset\n",
     "\n",
+    "\n",
     "def load_datasets(max_samples: int = None):\n",
     "    \"\"\"Load the dataset\"\"\"\n",
     "    train_data = BigBenchHard(split=\"train\")\n",
@@ -479,7 +479,7 @@
     "        val_data = subset_dataset(val_data, max_samples)\n",
     "        test_data = subset_dataset(test_data, max_samples)\n",
     "\n",
-    "    return train_data, val_data, test_data\n"
+    "    return train_data, val_data, test_data"
    ]
   },
   {
@@ -583,11 +583,11 @@
     "    def prepare_task(self, sample: Example):\n",
     "        return self.task.call, {\"question\": sample.question, \"id\": sample.id}\n",
     "\n",
-    "    def prepare_eval(\n",
-    "        self, sample: Example, y_pred: adal.GeneratorOutput\n",
-    "    ) -> float:\n",
+    "    def prepare_eval(self, sample: Example, y_pred: adal.GeneratorOutput) -> float:\n",
     "        y_label = -1\n",
-    "        if (y_pred is not None and y_pred.data is not None):  # if y_pred and y_pred.data: might introduce bug when the data is 0\n",
+    "        if (\n",
+    "            y_pred is not None and y_pred.data is not None\n",
+    "        ):  # if y_pred and y_pred.data: might introduce bug when the data is 0\n",
     "            y_label = y_pred.data\n",
     "        return self.eval_fn, {\"y\": y_label, \"y_gt\": sample.answer}"
    ]
@@ -604,7 +604,6 @@
     "    model_client: adal.ModelClient,\n",
     "    model_kwargs: Dict,\n",
     ") -> Dict:\n",
-    "\n",
     "    trainset, valset, testset = load_datasets()\n",
     "    # use max_samples=10 to test the code\n",
     "\n",
@@ -820,7 +819,7 @@
     "from adalflow.datasets.types import Example\n",
     "\n",
     "\n",
-    "class ObjectCountAdalComponent(adal.AdalComponent):# noqa: F811\n",
+    "class ObjectCountAdalComponent(adal.AdalComponent):  # noqa: F811\n",
     "    def __init__(\n",
     "        self,\n",
     "        model_client: adal.ModelClient,\n",
@@ -844,12 +843,11 @@
     "    def prepare_task(self, sample: Example):\n",
     "        return self.task.call, {\"question\": sample.question, \"id\": sample.id}\n",
     "\n",
-    "\n",
-    "    def prepare_eval(\n",
-    "        self, sample: Example, y_pred: adal.GeneratorOutput\n",
-    "    ) -> float:\n",
+    "    def prepare_eval(self, sample: Example, y_pred: adal.GeneratorOutput) -> float:\n",
     "        y_label = -1\n",
-    "        if (y_pred is not None and y_pred.data is not None):  # if y_pred and y_pred.data: might introduce bug when the data is 0\n",
+    "        if (\n",
+    "            y_pred is not None and y_pred.data is not None\n",
+    "        ):  # if y_pred and y_pred.data: might introduce bug when the data is 0\n",
     "            y_label = y_pred.data\n",
     "        return self.eval_fn, {\"y\": y_label, \"y_gt\": sample.answer}\n",
     "\n",
@@ -891,7 +889,7 @@
     "        **gpt_3_model,\n",
     "        teacher_model_config=gpt_4o_model,\n",
     "        text_optimizer_model_config=gpt_4o_model,\n",
-    "        backward_engine_model_config=gpt_4o_model\n",
+    "        backward_engine_model_config=gpt_4o_model,\n",
     "    )\n",
     "    print(adal_component)\n",
     "    trainer = adal.Trainer(\n",
@@ -916,7 +914,7 @@
     "        test_dataset=test_dataset,\n",
     "        debug=debug,\n",
     "        resume_from_ckpt=resume_from_ckpt,\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -3255,10 +3253,14 @@
     }
    ],
    "source": [
-    "train(debug=False, max_steps=12, strategy=\"constrained\",\n",
-    "      raw_shots=0, bootstrap_shots=1,\n",
-    "      exclude_input_fields_from_bootstrap_demos=True\n",
-    "      )"
+    "train(\n",
+    "    debug=False,\n",
+    "    max_steps=12,\n",
+    "    strategy=\"constrained\",\n",
+    "    raw_shots=0,\n",
+    "    bootstrap_shots=1,\n",
+    "    exclude_input_fields_from_bootstrap_demos=True,\n",
+    ")"
    ]
   },
   {
@@ -6015,13 +6017,17 @@
     }
    ],
    "source": [
-    "\n",
     "ckpt_path = \"/content/adalflow/ckpt/ObjectCountAdalComponent/constrained_max_steps_12_4e8a1_run_1.json\"\n",
     "\n",
-    "train(debug=False, max_steps=12, strategy=\"constrained\",\n",
-    "                raw_shots=0, bootstrap_shots=1,\n",
-    "                resume_from_ckpt=ckpt_path,\n",
-    "                exclude_input_fields_from_bootstrap_demos=True)"
+    "train(\n",
+    "    debug=False,\n",
+    "    max_steps=12,\n",
+    "    strategy=\"constrained\",\n",
+    "    raw_shots=0,\n",
+    "    bootstrap_shots=1,\n",
+    "    resume_from_ckpt=ckpt_path,\n",
+    "    exclude_input_fields_from_bootstrap_demos=True,\n",
+    ")"
    ]
   },
   {
@@ -8038,11 +8044,15 @@
     }
    ],
    "source": [
-    "\n",
-    "train(debug=False, max_steps=12, strategy=\"random\",\n",
-    "                raw_shots=0, bootstrap_shots=1,\n",
-    "                resume_from_ckpt=ckpt_path,\n",
-    "                exclude_input_fields_from_bootstrap_demos=False)"
+    "train(\n",
+    "    debug=False,\n",
+    "    max_steps=12,\n",
+    "    strategy=\"random\",\n",
+    "    raw_shots=0,\n",
+    "    bootstrap_shots=1,\n",
+    "    resume_from_ckpt=ckpt_path,\n",
+    "    exclude_input_fields_from_bootstrap_demos=False,\n",
+    ")"
    ]
   },
   {
