--- a/notebooks/tutorials/adalflow_dataclasses.ipynb
+++ b/notebooks/tutorials/adalflow_dataclasses.ipynb
@@ -145,8 +145,8 @@
     "\n",
     "\n",
     "# Set environment variables\n",
-    "os.environ['GROQ_API_KEY'] = groq_api_key\n",
-    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
+    "os.environ[\"GROQ_API_KEY\"] = groq_api_key\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
     "\n",
     "print(\"API keys have been set.\")"
    ]
@@ -231,11 +231,10 @@
     "    explanation: str = field(\n",
     "        metadata={\"desc\": \"A brief explanation of the concept in one sentence.\"}\n",
     "    )\n",
-    "    example: str = field(\n",
-    "        metadata={\"desc\": \"An example of the concept in a sentence.\"}\n",
-    "    )\n",
+    "    example: str = field(metadata={\"desc\": \"An example of the concept in a sentence.\"})\n",
     "    # Control output fields order\n",
     "    __output_fields__ = [\"explanation\", \"example\"]\n",
+    "\n",
     "\n",
     "# Define the template using jinja2 syntax\n",
     "qa_template = r\"\"\"<SYS>\n",
@@ -278,7 +277,7 @@
     "\n",
     "    async def acall(self, query: str):\n",
     "        \"\"\"Asynchronous call to generate response\"\"\"\n",
-    "        return await self.generator.acall({\"input_str\": query})\n"
+    "        return await self.generator.acall({\"input_str\": query})"
    ]
   },
   {
@@ -380,26 +379,20 @@
     "# 1. Basic DataClass with different field types\n",
     "@dataclass\n",
     "class MovieReview(adal.DataClass):\n",
-    "    title: str = field(\n",
-    "        metadata={\"desc\": \"The title of the movie\"}\n",
-    "    )\n",
+    "    title: str = field(metadata={\"desc\": \"The title of the movie\"})\n",
     "    rating: float = field(\n",
-    "        metadata={\n",
-    "            \"desc\": \"Rating from 1.0 to 10.0\",\n",
-    "            \"min\": 1.0,\n",
-    "            \"max\": 10.0\n",
-    "        }\n",
+    "        metadata={\"desc\": \"Rating from 1.0 to 10.0\", \"min\": 1.0, \"max\": 10.0}\n",
     "    )\n",
     "    pros: List[str] = field(\n",
     "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of positive points about the movie\"}\n",
+    "        metadata={\"desc\": \"List of positive points about the movie\"},\n",
     "    )\n",
     "    cons: List[str] = field(\n",
     "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of negative points about the movie\"}\n",
+    "        metadata={\"desc\": \"List of negative points about the movie\"},\n",
     "    )\n",
     "\n",
-    "    __output_fields__ = [\"title\", \"rating\", \"pros\", \"cons\"]\n"
+    "    __output_fields__ = [\"title\", \"rating\", \"pros\", \"cons\"]"
    ]
   },
   {
@@ -410,7 +403,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "@dataclass\n",
     "class Actor(adal.DataClass):\n",
     "    name: str = field(metadata={\"desc\": \"Actor's full name\"})\n",
@@ -429,20 +421,18 @@
     "\n",
     "# Have both MovieReview and Actor nested in DetailedMovieReview\n",
     "\n",
+    "\n",
     "@dataclass\n",
     "class DetailedMovieReview(adal.DataClass):\n",
     "    basic_review: MovieReview\n",
     "    cast: List[Actor] = field(\n",
-    "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of main actors in the movie\"}\n",
+    "        default_factory=list, metadata={\"desc\": \"List of main actors in the movie\"}\n",
     "    )\n",
     "    genre: List[str] = field(\n",
-    "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of genres for the movie\"}\n",
+    "        default_factory=list, metadata={\"desc\": \"List of genres for the movie\"}\n",
     "    )\n",
     "    recommend: bool = field(\n",
-    "        default_factory=str,\n",
-    "        metadata={\"desc\": \"Whether you would recommend this movie\"}\n",
+    "        default_factory=str, metadata={\"desc\": \"Whether you would recommend this movie\"}\n",
     "    )\n",
     "\n",
     "    __output_fields__ = [\"basic_review\", \"cast\", \"genre\", \"recommend\"]"
@@ -472,18 +462,25 @@
    "source": [
     "# Create the MovieReviewer component with MovieAnalysis data class\n",
     "class MovieReviewer(adal.Component):\n",
-    "    def __init__(self, model_client: adal.ModelClient, model_kwargs: Dict, data_class: adal.DataClass):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        model_client: adal.ModelClient,\n",
+    "        model_kwargs: Dict,\n",
+    "        data_class: adal.DataClass,\n",
+    "    ):\n",
     "        super().__init__()\n",
-    "        self.additional_structure_prompt = \"Dont use 'type' and 'properties' in output directly give as dict\"\n",
-    "        parser = adal.DataClassParser(\n",
-    "            data_class=data_class,\n",
-    "            return_data_class=True\n",
+    "        self.additional_structure_prompt = (\n",
+    "            \"Dont use 'type' and 'properties' in output directly give as dict\"\n",
     "        )\n",
+    "        parser = adal.DataClassParser(data_class=data_class, return_data_class=True)\n",
     "        self.generator = adal.Generator(\n",
     "            model_client=model_client,\n",
     "            model_kwargs=model_kwargs,\n",
     "            template=movie_review_template,\n",
-    "            prompt_kwargs={\"output_format_str\": parser.get_output_format_str() + self.additional_structure_prompt},\n",
+    "            prompt_kwargs={\n",
+    "                \"output_format_str\": parser.get_output_format_str()\n",
+    "                + self.additional_structure_prompt\n",
+    "            },\n",
     "            output_processors=parser,\n",
     "        )\n",
     "\n",
@@ -512,7 +509,7 @@
     "reviewer = MovieReviewer(\n",
     "    model_client=GroqAPIClient(),\n",
     "    model_kwargs={\"model\": \"llama3-8b-8192\"},\n",
-    "    data_class=DetailedMovieReview\n",
+    "    data_class=DetailedMovieReview,\n",
     ")\n",
     "\n",
     "response = reviewer(\"The Matrix\")\n",
@@ -541,7 +538,7 @@
     "reviewer = MovieReviewer(\n",
     "    model_client=adal.OpenAIClient(),\n",
     "    model_kwargs={\"model\": \"gpt-4o\"},\n",
-    "    data_class=DetailedMovieReview\n",
+    "    data_class=DetailedMovieReview,\n",
     ")\n",
     "response = reviewer(\"The Matrix\")\n",
     "print(f\"DetailedMovieReview: {response.data}\")\n",
@@ -566,16 +563,16 @@
    "source": [
     "# 3. second level nested dataclass\n",
     "\n",
+    "\n",
     "@dataclass\n",
     "class MovieAnalysis(adal.DataClass):\n",
     "    review: DetailedMovieReview\n",
     "    box_office: float = field(\n",
-    "        default=None,\n",
-    "        metadata={\"desc\": \"Box office earnings in millions of dollars\"}\n",
+    "        default=None, metadata={\"desc\": \"Box office earnings in millions of dollars\"}\n",
     "    )\n",
     "    awards: Dict[str, int] = field(\n",
     "        default=None,\n",
-    "        metadata={\"desc\": \"Dictionary of award categories and number of wins\"}\n",
+    "        metadata={\"desc\": \"Dictionary of award categories and number of wins\"},\n",
     "    )\n",
     "\n",
     "    __output_fields__ = [\"review\", \"box_office\", \"awards\"]"
@@ -605,7 +602,7 @@
     "analysis = MovieReviewer(\n",
     "    model_client=adal.OpenAIClient(),\n",
     "    model_kwargs={\"model\": \"gpt-3.5-turbo\"},\n",
-    "    data_class=MovieAnalysis\n",
+    "    data_class=MovieAnalysis,\n",
     ")\n",
     "\n",
     "response = analysis(\"The Matrix\")\n",
@@ -637,7 +634,7 @@
     "analysis = MovieReviewer(\n",
     "    model_client=GroqAPIClient(),\n",
     "    model_kwargs={\"model\": \"llama3-8b-8192\"},\n",
-    "    data_class=MovieAnalysis\n",
+    "    data_class=MovieAnalysis,\n",
     ")\n",
     "\n",
     "response = analysis(\"The Matrix\")\n",
@@ -668,33 +665,27 @@
     "# 1. Basic DataClass with different field types\n",
     "@dataclass\n",
     "class SongReview(adal.DataClass):\n",
-    "    title: str = field(\n",
-    "        metadata={\"desc\": \"The title of the song\"}\n",
-    "    )\n",
-    "    album: str = field(\n",
-    "        metadata={\"desc\": \"The album of the song\"}\n",
-    "    )\n",
+    "    title: str = field(metadata={\"desc\": \"The title of the song\"})\n",
+    "    album: str = field(metadata={\"desc\": \"The album of the song\"})\n",
     "    ranking: int = field(\n",
-    "        metadata={\n",
-    "            \"desc\": \"Billboard peak ranking from 1 to 200\",\n",
-    "            \"min\": 1,\n",
-    "            \"max\": 200\n",
-    "        }\n",
+    "        metadata={\"desc\": \"Billboard peak ranking from 1 to 200\", \"min\": 1, \"max\": 200}\n",
     "    )\n",
     "    streaming: Dict[str, int] = field(\n",
     "        default_factory=list,\n",
-    "        metadata={\"desc\": \"Dict of lastest approximate streaming count in spotify and in youtube. Gives the count in millions\"}\n",
+    "        metadata={\n",
+    "            \"desc\": \"Dict of lastest approximate streaming count in spotify and in youtube. Gives the count in millions\"\n",
+    "        },\n",
     "    )\n",
     "    pros: List[str] = field(\n",
     "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of positive points about the song\"}\n",
+    "        metadata={\"desc\": \"List of positive points about the song\"},\n",
     "    )\n",
     "    cons: List[str] = field(\n",
     "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of negative points about the song\"}\n",
+    "        metadata={\"desc\": \"List of negative points about the song\"},\n",
     "    )\n",
     "\n",
-    "    __output_fields__ = [\"title\", \"rating\", \"streaming\", \"pros\", \"cons\"]\n"
+    "    __output_fields__ = [\"title\", \"rating\", \"streaming\", \"pros\", \"cons\"]"
    ]
   },
   {
@@ -705,7 +696,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "@dataclass\n",
     "class Artist(adal.DataClass):\n",
     "    name: str = field(metadata={\"desc\": \"Artist's full name\"})\n",
@@ -722,6 +712,7 @@
    "source": [
     "# 2. Nested DataClass example\n",
     "\n",
+    "\n",
     "@dataclass\n",
     "class DetailedSongReview(adal.DataClass):\n",
     "    basic_review: SongReview = field(\n",
@@ -729,15 +720,13 @@
     "    )\n",
     "    cast: List[Artist] = field(\n",
     "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of main singer, lyrisist and musicians in the song\"}\n",
+    "        metadata={\"desc\": \"List of main singer, lyrisist and musicians in the song\"},\n",
     "    )\n",
     "    genre: List[str] = field(\n",
-    "        default_factory=list,\n",
-    "        metadata={\"desc\": \"List of genres for the song\"}\n",
+    "        default_factory=list, metadata={\"desc\": \"List of genres for the song\"}\n",
     "    )\n",
     "    recommend: bool = field(\n",
-    "        default_factory=str,\n",
-    "        metadata={\"desc\": \"Whether you would recommend this song\"}\n",
+    "        default_factory=str, metadata={\"desc\": \"Whether you would recommend this song\"}\n",
     "    )\n",
     "\n",
     "    __output_fields__ = [\"basic_review\", \"cast\", \"genre\", \"recommend\"]"
@@ -753,21 +742,19 @@
    "source": [
     "# 3. two levels of nesting dataclass\n",
     "\n",
-    "# all these fields as we use default, it is optional, so \n",
+    "# all these fields as we use default, it is optional, so\n",
     "# llm might not output that field if they dont have information\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class SongAnalysis(adal.DataClass):\n",
     "    review: DetailedSongReview = field(\n",
     "        default=DetailedSongReview, metadata={\"desc\": \"Song review details\"}\n",
     "    )\n",
-    "    duration: float = field(\n",
-    "        default=None,\n",
-    "        metadata={\"desc\": \"Duration of the song\"}\n",
-    "    )\n",
+    "    duration: float = field(default=None, metadata={\"desc\": \"Duration of the song\"})\n",
     "    awards: Dict[str, int] = field(\n",
     "        default=None,\n",
-    "        metadata={\"desc\": \"Dictionary of award categories and number of wins\"}\n",
+    "        metadata={\"desc\": \"Dictionary of award categories and number of wins\"},\n",
     "    )\n",
     "\n",
     "    __output_fields__ = [\"review\", \"duration\", \"awards\"]"
@@ -788,7 +775,7 @@
     "{{output_format_str}}\n",
     "</OUTPUT_FORMAT>\n",
     "</SYS>\n",
-    "<USER> Review this song: {{song_title}} </USER>\"\"\"\n"
+    "<USER> Review this song: {{song_title}} </USER>\"\"\""
    ]
   },
   {
@@ -803,17 +790,20 @@
     "class SongReviewer(adal.Component):\n",
     "    def __init__(self, model_client: adal.ModelClient, model_kwargs: Dict):\n",
     "        super().__init__()\n",
-    "        self.additional_structure_prompt = \"Dont use 'type' and 'properties' in output directly give as dict\"\n",
+    "        self.additional_structure_prompt = (\n",
+    "            \"Dont use 'type' and 'properties' in output directly give as dict\"\n",
+    "        )\n",
     "        parser = adal.DataClassParser(\n",
-    "            data_class=SongAnalysis,\n",
-    "            return_data_class=False,\n",
-    "            format_type=\"json\"\n",
+    "            data_class=SongAnalysis, return_data_class=False, format_type=\"json\"\n",
     "        )\n",
     "        self.generator = adal.Generator(\n",
     "            model_client=model_client,\n",
     "            model_kwargs=model_kwargs,\n",
     "            template=song_review_template,\n",
-    "            prompt_kwargs={\"output_format_str\": parser.get_output_format_str() + self.additional_structure_prompt },\n",
+    "            prompt_kwargs={\n",
+    "                \"output_format_str\": parser.get_output_format_str()\n",
+    "                + self.additional_structure_prompt\n",
+    "            },\n",
     "            output_processors=parser,\n",
     "        )\n",
     "\n",
@@ -836,8 +826,8 @@
    ],
    "source": [
     "analysis = SongReviewer(\n",
-    "     model_client=GroqAPIClient(),\n",
-    "     model_kwargs={\"model\": \"llama3-8b-8192\"},\n",
+    "    model_client=GroqAPIClient(),\n",
+    "    model_kwargs={\"model\": \"llama3-8b-8192\"},\n",
     ")\n",
     "\n",
     "response = analysis(\"Shape of you\")\n",
@@ -886,27 +876,27 @@
     "print(f\"Album: {analysis['review']['basic_review']['album']}\")\n",
     "print(f\"Ranking: {analysis['review']['basic_review']['ranking']}\")\n",
     "\n",
-    "for platform, views in analysis['review']['basic_review']['streaming'].items():\n",
+    "for platform, views in analysis[\"review\"][\"basic_review\"][\"streaming\"].items():\n",
     "    print(f\"- {platform} - {views} million views\")\n",
     "print(\"\\nPros:\")\n",
-    "for pro in analysis['review'][\"basic_review\"][\"pros\"]:\n",
+    "for pro in analysis[\"review\"][\"basic_review\"][\"pros\"]:\n",
     "    print(f\"- {pro}\")\n",
     "\n",
     "print(\"\\nArtist's:\")\n",
-    "for actor in analysis['review'][\"cast\"]:\n",
-    "        print(f\"- {actor['name']} as {actor['role']}\")\n",
+    "for actor in analysis[\"review\"][\"cast\"]:\n",
+    "    print(f\"- {actor['name']} as {actor['role']}\")\n",
     "\n",
-    "if analysis['review']['genre']:\n",
+    "if analysis[\"review\"][\"genre\"]:\n",
     "    print(\"\\nGenere:  \")\n",
-    "    for genre in analysis['review']['genre']:\n",
+    "    for genre in analysis[\"review\"][\"genre\"]:\n",
     "        print(f\" {genre} \")\n",
     "\n",
-    "if analysis['duration']:\n",
+    "if analysis[\"duration\"]:\n",
     "    print(f\"\\nDuration: {analysis['duration']} minutes\")\n",
     "\n",
-    "if hasattr(analysis, 'awards') and analysis['awards']:\n",
+    "if hasattr(analysis, \"awards\") and analysis[\"awards\"]:\n",
     "    print(\"\\nAwards:\")\n",
-    "    for category, count in analysis['awards'].items():\n",
+    "    for category, count in analysis[\"awards\"].items():\n",
     "        print(f\"- {category}: {count}\")"
    ]
   },
