--- a/notebooks/tutorials/adalflow_modelclient.ipynb
+++ b/notebooks/tutorials/adalflow_modelclient.ipynb
@@ -294,7 +294,6 @@
     "from adalflow.core.types import ModelType, EmbedderOutput\n",
     "from adalflow.components.model_client import OpenAIClient\n",
     "from dataclasses import dataclass\n",
-    "from enum import Enum\n",
     "from numpy.linalg import norm"
    ]
   },
@@ -662,7 +661,7 @@
     "from adalflow.components.model_client import OpenAIClient\n",
     "from adalflow.core.types import ModelType\n",
     "from adalflow.utils import setup_env\n",
-    "from typing import List, Dict"
+    "from typing import List"
    ]
   },
   {
@@ -954,7 +953,6 @@
    },
    "outputs": [],
    "source": [
-    "import asyncio\n",
     "import time\n",
     "from adalflow.components.model_client import (\n",
     "    OpenAIClient,\n",
@@ -1173,13 +1171,13 @@
     "    openai_client = OpenAIClient(chat_completion_parser=func)\n",
     "\n",
     "    # Define a sample query (user question)\n",
-    "    query = \"What is the capital of France?\"\n",
+    "    # query = \"What is the capital of France?\" # Local variable `query` is assigned to but never used\n",
     "\n",
     "    # Set the model type to LLM (Large Language Model)\n",
-    "    model_type = ModelType.LLM\n",
+    "    # model_type = ModelType.LLM # Local variable `model_type` is assigned to but never used\n",
     "\n",
     "    # Create the prompt by formatting the user query as a conversation\n",
-    "    prompt = f\"User: {query}\\n\"\n",
+    "    # prompt = f\"User: {query}\\n\" # Local variable `prompt` is assigned to but never used\n",
     "\n",
     "    # Define any additional parameters needed for the model (e.g., the input string)\n",
     "    prompt_kwargs = {\n",
@@ -1301,7 +1299,7 @@
     "from adalflow.components.model_client import GroqAPIClient\n",
     "from adalflow.core.types import ModelType\n",
     "from adalflow.utils import setup_env\n",
-    "from typing import List, Dict"
+    "from typing import List"
    ]
   },
   {
@@ -1312,6 +1310,10 @@
    },
    "outputs": [],
    "source": [
+    "# need to delete past ChatConversation calss to avoid redefinition error\n",
+    "del ChatConversation\n",
+    "\n",
+    "\n",
     "class ChatConversation:\n",
     "    def __init__(self):\n",
     "        \"\"\"\n",
@@ -1484,8 +1486,6 @@
    },
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "from adalflow.components.model_client import GroqAPIClient\n",
     "from adalflow.core.types import ModelType\n",
     "from typing import List"
    ]
@@ -1498,6 +1498,10 @@
    },
    "outputs": [],
    "source": [
+    "# need to delete past ChatConversation calss to avoid redefinition error\n",
+    "del ChatConversation\n",
+    "\n",
+    "\n",
     "class ChatConversation:\n",
     "    def __init__(self):\n",
     "        # Using an asynchronous client for communication with GroqAPI\n",
@@ -1616,11 +1620,6 @@
    },
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "import time\n",
-    "from adalflow.components.model_client import (\n",
-    "    GroqAPIClient,\n",
-    ")  # Assuming GroqAPI with .call() and .acall() is available\n",
     "from adalflow.core.types import ModelType"
    ]
   },
@@ -1791,7 +1790,7 @@
     "\n",
     "import openai\n",
     "from adalflow.core.model_client import ModelClient\n",
-    "from adalflow.core.types import ModelType, GeneratorOutput, EmbedderOutput\n",
+    "from adalflow.core.types import ModelType, GeneratorOutput\n",
     "from openai.types import (\n",
     "    CreateEmbeddingResponse,\n",
     ")\n",
