--- a/notebooks/tutorials/adalflow_text_splitter.ipynb
+++ b/notebooks/tutorials/adalflow_text_splitter.ipynb
@@ -31,7 +31,7 @@
     "openai_api_key = getpass(\"Please enter your OpenAI API key: \")\n",
     "\n",
     "# Set environment variables\n",
-    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
     "\n",
     "print(\"API keys have been set.\")"
    ]
@@ -76,16 +76,11 @@
     "from adalflow.core.types import Document\n",
     "\n",
     "# Configure the splitter settings\n",
-    "text_splitter = TextSplitter(\n",
-    "    split_by=\"word\",\n",
-    "    chunk_size=5,\n",
-    "    chunk_overlap=1\n",
-    ")\n",
+    "text_splitter = TextSplitter(split_by=\"word\", chunk_size=5, chunk_overlap=1)\n",
     "\n",
     "# Example document\n",
     "doc = Document(\n",
-    "    text=\"Example text. More example text. Even more text to illustrate.\",\n",
-    "    id=\"doc1\"\n",
+    "    text=\"Example text. More example text. Even more text to illustrate.\", id=\"doc1\"\n",
     ")\n",
     "\n",
     "# Execute the splitting\n",
@@ -135,18 +130,13 @@
     "from adalflow.core.types import Document\n",
     "\n",
     "# Configure the splitter settings\n",
-    "text_splitter = TextSplitter(\n",
-    "    split_by=\"token\",\n",
-    "    chunk_size=5,\n",
-    "    chunk_overlap=0\n",
-    ")\n",
+    "text_splitter = TextSplitter(split_by=\"token\", chunk_size=5, chunk_overlap=0)\n",
     "\n",
     "doc = Document(\n",
-    "    text=\"Example text. More example text. Even more text to illustrate.\",\n",
-    "    id = \"doc1\"\n",
-    "    )\n",
+    "    text=\"Example text. More example text. Even more text to illustrate.\", id=\"doc1\"\n",
+    ")\n",
     "\n",
-    "splitted_docs = (text_splitter.call(documents=[doc]))\n",
+    "splitted_docs = text_splitter.call(documents=[doc])\n",
     "\n",
     "for doc in splitted_docs:\n",
     "    print(doc)"
