--- a/tutorials/database.ipynb
+++ b/tutorials/database.ipynb
@@ -15,26 +15,26 @@
    "outputs": [],
    "source": [
     "# setup data needed for the notes\n",
-    "query_1 = \"What are the benefits of renewable energy?\" # gt is [0, 3]\n",
-    "query_2 = \"How do solar panels impact the environment?\" # gt is [1, 2]\n",
+    "query_1 = \"What are the benefits of renewable energy?\"  # gt is [0, 3]\n",
+    "query_2 = \"How do solar panels impact the environment?\"  # gt is [1, 2]\n",
     "\n",
-    "org_documents =[\n",
+    "org_documents = [\n",
     "    {\n",
     "        \"title\": \"The Impact of Renewable Energy on the Economy\",\n",
-    "        \"content\": \"Renewable energy technologies not only help in reducing greenhouse gas emissions but also contribute significantly to the economy by creating jobs in the manufacturing and installation sectors. The growth in renewable energy usage boosts local economies through increased investment in technology and infrastructure.\"\n",
+    "        \"content\": \"Renewable energy technologies not only help in reducing greenhouse gas emissions but also contribute significantly to the economy by creating jobs in the manufacturing and installation sectors. The growth in renewable energy usage boosts local economies through increased investment in technology and infrastructure.\",\n",
     "    },\n",
     "    {\n",
     "        \"title\": \"Understanding Solar Panels\",\n",
-    "        \"content\": \"Solar panels convert sunlight into electricity by allowing photons, or light particles, to knock electrons free from atoms, generating a flow of electricity. Solar panels are a type of renewable energy technology that has been found to have a significant positive effect on the environment by reducing the reliance on fossil fuels.\"\n",
+    "        \"content\": \"Solar panels convert sunlight into electricity by allowing photons, or light particles, to knock electrons free from atoms, generating a flow of electricity. Solar panels are a type of renewable energy technology that has been found to have a significant positive effect on the environment by reducing the reliance on fossil fuels.\",\n",
     "    },\n",
     "    {\n",
     "        \"title\": \"Pros and Cons of Solar Energy\",\n",
-    "        \"content\": \"While solar energy offers substantial environmental benefits, such as reducing carbon footprints and pollution, it also has downsides. The production of solar panels can lead to hazardous waste, and large solar farms require significant land, which can disrupt local ecosystems.\"\n",
+    "        \"content\": \"While solar energy offers substantial environmental benefits, such as reducing carbon footprints and pollution, it also has downsides. The production of solar panels can lead to hazardous waste, and large solar farms require significant land, which can disrupt local ecosystems.\",\n",
     "    },\n",
     "    {\n",
-    "        \"title\":  \"Renewable Energy and Its Effects\",\n",
-    "        \"content\": \"Renewable energy sources like wind, solar, and hydro power play a crucial role in combating climate change. They do not produce greenhouse gases during operation, making them essential for sustainable development. However, the initial setup and material sourcing for these technologies can still have environmental impacts.\"\n",
-    "    }\n",
+    "        \"title\": \"Renewable Energy and Its Effects\",\n",
+    "        \"content\": \"Renewable energy sources like wind, solar, and hydro power play a crucial role in combating climate change. They do not produce greenhouse gases during operation, making them essential for sustainable development. However, the initial setup and material sourcing for these technologies can still have environmental impacts.\",\n",
+    "    },\n",
     "]\n",
     "\n",
     "turns = [\n",
@@ -42,14 +42,14 @@
     "        \"user\": \"What are the benefits of renewable energy?\",\n",
     "        \"system\": \"I can see you are interested in renewable energy. Renewable energy technologies not only help in reducing greenhouse gas emissions but also contribute significantly to the economy by creating jobs in the manufacturing and installation sectors. The growth in renewable energy usage boosts local economies through increased investment in technology and infrastructure.\",\n",
     "        \"user_time\": \"2021-09-01T12:00:00Z\",\n",
-    "        \"system_time\": \"2021-09-01T12:00:01Z\"\n",
+    "        \"system_time\": \"2021-09-01T12:00:01Z\",\n",
     "    },\n",
     "    {\n",
     "        \"user\": \"How do solar panels impact the environment?\",\n",
     "        \"system\": \"Solar panels convert sunlight into electricity by allowing photons, or light particles, to knock electrons free from atoms, generating a flow of electricity. Solar panels are a type of renewable energy technology that has been found to have a significant positive effect on the environment by reducing the reliance on fossil fuels.\",\n",
     "        \"user_time\": \"2021-09-01T12:00:02Z\",\n",
-    "        \"system_time\": \"2021-09-01T12:00:03Z\"\n",
-    "    }\n",
+    "        \"system_time\": \"2021-09-01T12:00:03Z\",\n",
+    "    },\n",
     "]"
    ]
   },
@@ -78,7 +78,10 @@
     "from adalflow.core.types import Document\n",
     "\n",
     "# we will save the content to text and title in the meta_data\n",
-    "documents  = [Document(text=doc['content'], meta_data={'title': doc['title']}) for doc in org_documents]\n",
+    "documents = [\n",
+    "    Document(text=doc[\"content\"], meta_data={\"title\": doc[\"title\"]})\n",
+    "    for doc in org_documents\n",
+    "]\n",
     "print(documents)"
    ]
   },
@@ -151,7 +154,7 @@
    "source": [
     "# prepare the data pipeline\n",
     "\n",
-    "from adalflow.core.embedder import Embedder \n",
+    "from adalflow.core.embedder import Embedder\n",
     "from adalflow.core.types import ModelClientType\n",
     "from adalflow.components.data_process import DocumentSplitter, ToEmbeddings\n",
     "from adalflow.core.component import Sequential\n",
@@ -163,14 +166,10 @@
     "    \"encoding_format\": \"float\",\n",
     "}\n",
     "\n",
-    "splitter_config = {\n",
-    "    \"split_by\": \"word\",\n",
-    "    \"split_length\": 50,\n",
-    "    \"split_overlap\": 10\n",
-    "}\n",
+    "splitter_config = {\"split_by\": \"word\", \"split_length\": 50, \"split_overlap\": 10}\n",
     "\n",
     "splitter = DocumentSplitter(**splitter_config)\n",
-    "embedder = Embedder(model_client =ModelClientType.OPENAI(), model_kwargs=model_kwargs)\n",
+    "embedder = Embedder(model_client=ModelClientType.OPENAI(), model_kwargs=model_kwargs)\n",
     "embedder_transformer = ToEmbeddings(embedder, batch_size=2)\n",
     "data_transformer = Sequential(splitter, embedder_transformer)\n",
     "print(data_transformer)"
@@ -185,13 +184,19 @@
     "# prepare mapping functions to map the data to Document object for the pipeline\n",
     "\n",
     "from typing import Dict\n",
+    "\n",
+    "\n",
     "# mapping function for org_documents\n",
     "def map_to_document(doc: Dict) -> Document:\n",
-    "    return Document(text=doc['content'], meta_data={'title': doc['title']})\n",
+    "    return Document(text=doc[\"content\"], meta_data={\"title\": doc[\"title\"]})\n",
+    "\n",
     "\n",
     "def map_dialogturn_to_document(turn: DialogTurn) -> Document:\n",
     "    # it can be important to keep the original data's id\n",
-    "    return Document(id=turn.id, text=turn.user_query.query_str + ' ' + turn.assistant_response.response_str)"
+    "    return Document(\n",
+    "        id=turn.id,\n",
+    "        text=turn.user_query.query_str + \" \" + turn.assistant_response.response_str,\n",
+    "    )"
    ]
   },
   {
@@ -304,7 +309,7 @@
     "# create a db for the dialog_turns\n",
     "from adalflow.core.db import LocalDB\n",
     "\n",
-    "dialog_turn_db = LocalDB('dialog_turns')\n",
+    "dialog_turn_db = LocalDB(\"dialog_turns\")\n",
     "print(dialog_turn_db)\n",
     "\n",
     "dialog_turn_db.load(dialog_turns)\n",
@@ -397,7 +402,7 @@
    ],
    "source": [
     "# save the state of the dialog_turn_db\n",
-    "dialog_turn_db.save_state('dialog_turn_db_state.pkl')\n",
+    "dialog_turn_db.save_state(\"dialog_turn_db_state.pkl\")\n",
     "\n",
     "print(dialog_turn_db)"
    ]
@@ -432,8 +437,8 @@
    ],
    "source": [
     "# restore the state of the restored_dialog_turn_db\n",
-    "restored_dialog_turn_db = LocalDB.load_state('dialog_turn_db_state.pkl')\n",
-    "print(restored_dialog_turn_db)\n"
+    "restored_dialog_turn_db = LocalDB.load_state(\"dialog_turn_db_state.pkl\")\n",
+    "print(restored_dialog_turn_db)"
    ]
   },
   {
@@ -537,18 +542,15 @@
     }
    ],
    "source": [
-    "# prepare the generator for the dialog turns \n",
+    "# prepare the generator for the dialog turns\n",
     "\n",
     "from adalflow.core import Generator\n",
     "\n",
-    "llm_kwargs = {\n",
-    "    \"model\": \"gpt-3.5-turbo\"\n",
-    "}\n",
+    "llm_kwargs = {\"model\": \"gpt-3.5-turbo\"}\n",
     "\n",
     "# we will use the default prompt, and using input_str and chat_history_str for the final prompt\n",
-    "generator = Generator(model_client = ModelClientType.OPENAI(), model_kwargs=llm_kwargs)\n",
-    "print(generator)\n",
-    "\n"
+    "generator = Generator(model_client=ModelClientType.OPENAI(), model_kwargs=llm_kwargs)\n",
+    "print(generator)"
    ]
   },
   {
@@ -614,15 +616,17 @@
    ],
    "source": [
     "# lets see how the prompt will be if we pass the input_str and chat_history_str\n",
-    "input_str = \"What are the benefits of renewable energy? Did I ask this before?\" \n",
+    "input_str = \"What are the benefits of renewable energy? Did I ask this before?\"\n",
+    "\n",
     "\n",
     "def format_chat_history_str(turns: list) -> str:\n",
     "    chat_history_str = []\n",
     "    for turn in turns:\n",
-    "        chat_history_str.append(turn.to_yaml()) # format as yaml\n",
+    "        chat_history_str.append(turn.to_yaml())  # format as yaml\n",
     "    # join with newline\n",
-    "    chat_history_str = '\\n_________\\n'.join(chat_history_str)\n",
+    "    chat_history_str = \"\\n_________\\n\".join(chat_history_str)\n",
     "    return chat_history_str\n",
+    "\n",
     "\n",
     "chat_history_str = format_chat_history_str(dialog_turns)\n",
     "print(generator.print_prompt(input_str=input_str, chat_history_str=chat_history_str))"
@@ -663,30 +667,32 @@
     }
    ],
    "source": [
-    "# as we have quite a bit of empty fields, lets exclude them \n",
+    "# as we have quite a bit of empty fields, lets exclude them\n",
     "from typing import List\n",
     "\n",
-    "input_str = \"What are the benefits of renewable energy? Did I ask this before?\" \n",
+    "input_str = \"What are the benefits of renewable energy? Did I ask this before?\"\n",
+    "\n",
     "\n",
     "def format_chat_history_str(turns: List[DialogTurn]) -> str:\n",
     "    chat_history_str = []\n",
     "    for turn in turns:\n",
     "        chat_history_str.append(\n",
-    "                    turn.to_yaml(\n",
-    "                        exclude=[\n",
-    "                            \"id\",\n",
-    "                            \"user_id\",\n",
-    "                            \"session_id\",\n",
-    "                            \"user_query_timestamp\",\n",
-    "                            \"assistant_response_timestamp\",\n",
-    "                            \"order\",\n",
-    "                            \"metadata\",\n",
-    "                            \"vector\",\n",
-    "                        ],\n",
-    "                    )\n",
-    "                )  \n",
-    "    chat_history_str = '\\n_________\\n'.join(chat_history_str)\n",
+    "            turn.to_yaml(\n",
+    "                exclude=[\n",
+    "                    \"id\",\n",
+    "                    \"user_id\",\n",
+    "                    \"session_id\",\n",
+    "                    \"user_query_timestamp\",\n",
+    "                    \"assistant_response_timestamp\",\n",
+    "                    \"order\",\n",
+    "                    \"metadata\",\n",
+    "                    \"vector\",\n",
+    "                ],\n",
+    "            )\n",
+    "        )\n",
+    "    chat_history_str = \"\\n_________\\n\".join(chat_history_str)\n",
     "    return chat_history_str\n",
+    "\n",
     "\n",
     "chat_history_str = format_chat_history_str(dialog_turn_db.items[0:1])\n",
     "print(generator.print_prompt(input_str=input_str, chat_history_str=chat_history_str))"
@@ -861,6 +867,7 @@
    "source": [
     "# we will use the retriever to find top_k chunked documents, from its partent_doc_id, we will find the initial dialog_turn, and feed that to the generator\n",
     "from adalflow.utils.logger import get_logger\n",
+    "\n",
     "get_logger()\n",
     "\n",
     "embeddings = [item.vector for item in dialog_turn_db.transformed_items[key]]\n",
@@ -868,7 +875,7 @@
     "retriever.build_index_from_documents(documents=embeddings)\n",
     "\n",
     "# top_k_documents = retriever(input=input_str)\n",
-    "# print(top_k_documents)\n"
+    "# print(top_k_documents)"
    ]
   },
   {
@@ -907,7 +914,12 @@
    "source": [
     "# get the parent_doc_id from the top_k_documents\n",
     "\n",
-    "parent_doc_ids = set([dialog_turn_db.transformed_items[key][doc_index].parent_doc_id for doc_index in top_k_documents[0].doc_indices])\n",
+    "parent_doc_ids = set(\n",
+    "    [\n",
+    "        dialog_turn_db.transformed_items[key][doc_index].parent_doc_id\n",
+    "        for doc_index in top_k_documents[0].doc_indices\n",
+    "    ]\n",
+    ")\n",
     "print(parent_doc_ids)"
    ]
   },
@@ -917,7 +929,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetched_dialog_turns=dialog_turn_db.fetch_items(condition=lambda x: x.id in parent_doc_ids)"
+    "fetched_dialog_turns = dialog_turn_db.fetch_items(\n",
+    "    condition=lambda x: x.id in parent_doc_ids\n",
+    ")"
    ]
   },
   {
@@ -941,7 +955,9 @@
    "source": [
     "chat_history_str = format_chat_history_str(fetched_dialog_turns)\n",
     "\n",
-    "output = generator(prompt_kwargs={\"input_str\": input_str, \"chat_history_str\": chat_history_str})\n",
+    "output = generator(\n",
+    "    prompt_kwargs={\"input_str\": input_str, \"chat_history_str\": chat_history_str}\n",
+    ")\n",
     "print(output)"
    ]
   }
