--- a/tutorials/dataclass.ipynb
+++ b/tutorials/dataclass.ipynb
@@ -8,23 +8,23 @@
    "source": [
     "from dataclasses import dataclass, field\n",
     "\n",
+    "\n",
     "@dataclass\n",
     "class Question:\n",
-    "    question: str = field(\n",
-    "        metadata={\"desc\": \"The question asked by the user\"}\n",
-    "    )\n",
+    "    question: str = field(metadata={\"desc\": \"The question asked by the user\"})\n",
     "    metadata: dict = field(\n",
     "        metadata={\"desc\": \"The metadata of the question\"}, default_factory=dict\n",
     "    )\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class TrecData:\n",
     "    question: Question = field(\n",
     "        metadata={\"desc\": \"The question asked by the user\"}\n",
-    "    ) # Required field, you have to provide the question field at the instantiation\n",
+    "    )  # Required field, you have to provide the question field at the instantiation\n",
     "    label: int = field(\n",
     "        metadata={\"desc\": \"The label of the question\"}, default=0\n",
-    "    ) # Optional field"
+    "    )  # Optional field"
    ]
   },
   {
@@ -49,6 +49,7 @@
     "print(example)\n",
     "\n",
     "from dataclasses import asdict\n",
+    "\n",
     "print(asdict(example))\n",
     "reconstructed = TrecData(**asdict(example))\n",
     "print(reconstructed)\n",
@@ -97,22 +98,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lets see what DataClass can do \n",
+    "# lets see what DataClass can do\n",
     "# 1. allow required field after optional field using required_field on default_factory\n",
     "\n",
     "from adalflow.core import DataClass, required_field\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class TrecData2(DataClass):\n",
     "    question: Question = field(\n",
     "        metadata={\"desc\": \"The question asked by the user\"}\n",
-    "    ) # Required field, you have to provide the question field at the instantiation\n",
+    "    )  # Required field, you have to provide the question field at the instantiation\n",
     "    label: int = field(\n",
     "        metadata={\"desc\": \"The label of the question\"}, default=0\n",
-    "    ) # Optional field\n",
+    "    )  # Optional field\n",
     "    metadata: dict = field(\n",
-    "        metadata={\"desc\": \"The metadata of the question\"}, default_factory=required_field()\n",
-    "    ) # required field"
+    "        metadata={\"desc\": \"The metadata of the question\"},\n",
+    "        default_factory=required_field(),\n",
+    "    )  # required field"
    ]
   },
   {
@@ -140,10 +143,10 @@
     "example = TrecData2(Question(\"What is the capital of France?\"), 1, {\"key\": \"value\"})\n",
     "print(example)\n",
     "\n",
-    "dict_example = TrecData2.to_dict(example) # use as if its a class method\n",
+    "dict_example = TrecData2.to_dict(example)  # use as if its a class method\n",
     "print(dict_example)\n",
     "\n",
-    "dict_example_2 = example.to_dict() # use it  as instance method\n",
+    "dict_example_2 = example.to_dict()  # use it  as instance method\n",
     "print(dict_example)\n",
     "\n",
     "reconstructed = TrecData2.from_dict(dict_example)\n",
@@ -178,7 +181,9 @@
     "print(dict_exclude)\n",
     "\n",
     "# exclude field of the parent and child class\n",
-    "dict_exclude = example.to_dict(exclude={\"TrecData2\": [\"metadata\"], \"Question\": [\"metadata\"]})\n",
+    "dict_exclude = example.to_dict(\n",
+    "    exclude={\"TrecData2\": [\"metadata\"], \"Question\": [\"metadata\"]}\n",
+    ")\n",
     "print(dict_exclude)"
    ]
   },
@@ -271,8 +276,7 @@
     "print(example_str)\n",
     "\n",
     "example_str = example.format_example_str(DataClassFormatType.EXAMPLE_YAML)\n",
-    "print(example_str)\n",
-    "\n"
+    "print(example_str)"
    ]
   },
   {
@@ -298,7 +302,7 @@
    ],
    "source": [
     "# Now, lets check the data format using class method without instance\n",
-    "# schema, you can choose to only use properties \n",
+    "# schema, you can choose to only use properties\n",
     "\n",
     "schema = TrecData2.to_schema()\n",
     "schema"
@@ -326,7 +330,9 @@
    ],
    "source": [
     "# schema with exclude\n",
-    "schema_exclude = TrecData2.to_schema(exclude={\"TrecData2\": [\"metadata\"], \"Question\": [\"metadata\"]})\n",
+    "schema_exclude = TrecData2.to_schema(\n",
+    "    exclude={\"TrecData2\": [\"metadata\"], \"Question\": [\"metadata\"]}\n",
+    ")\n",
     "schema_exclude"
    ]
   },
@@ -373,7 +379,9 @@
    "source": [
     "# exclude field of the parent and child class\n",
     "\n",
-    "json_signature_exclude = TrecData2.to_json_signature(exclude={\"TrecData2\": [\"metadata\"], \"Question\": [\"metadata\"]})\n",
+    "json_signature_exclude = TrecData2.to_json_signature(\n",
+    "    exclude={\"TrecData2\": [\"metadata\"], \"Question\": [\"metadata\"]}\n",
+    ")\n",
     "print(json_signature_exclude)"
    ]
   },
@@ -464,7 +472,7 @@
     }
    ],
    "source": [
-    "# use the DataClassFormatType to control it \n",
+    "# use the DataClassFormatType to control it\n",
     "\n",
     "from adalflow.core import DataClassFormatType\n",
     "\n",
@@ -494,6 +502,8 @@
    "source": [
     "# load with customizd from dict\n",
     "from typing import Dict\n",
+    "\n",
+    "\n",
     "@dataclass\n",
     "class OutputFormat(DataClass):\n",
     "    thought: str = field(\n",
@@ -520,6 +530,7 @@
     "            \"class_name\": _COARSE_LABELS_DESC[data[\"coarse_label\"]],\n",
     "        }\n",
     "        return super().from_dict(data)\n",
+    "\n",
     "\n",
     "data = OutputFormat.from_dict({\"coarse_label\": 1})\n",
     "print(data)"
