--- a/tutorials/generator.ipynb
+++ b/tutorials/generator.ipynb
@@ -49,10 +49,10 @@
     "\n",
     "enable_library_logging(level=\"DEBUG\")\n",
     "\n",
-    "model_kwargs={\n",
+    "model_kwargs = {\n",
     "    \"model\": \"gpt-3.5-turbo\",\n",
     "    \"logprobs\": True,\n",
-    "    \"n\": 2, # the number of chat completion choices\n",
+    "    \"n\": 2,  # the number of chat completion choices\n",
     "}\n",
     "model_client = OpenAIClient(chat_completion_parser=get_probabilities)\n",
     "generator = Generator(model_client=model_client, model_kwargs=model_kwargs)\n",
@@ -80,7 +80,7 @@
    "source": [
     "from adalflow.core import Component, Generator\n",
     "from adalflow.components.model_client import GroqAPIClient\n",
-    "from adalflow.utils import setup_env # noqa\n",
+    "from adalflow.utils import setup_env  # noqa\n",
     "\n",
     "\n",
     "class SimpleQA(Component):\n",
@@ -93,7 +93,9 @@
     "        You:\n",
     "        \"\"\"\n",
     "        self.generator = Generator(\n",
-    "            model_client=GroqAPIClient(), model_kwargs={\"model\": \"llama3-8b-8192\"}, template=template\n",
+    "            model_client=GroqAPIClient(),\n",
+    "            model_kwargs={\"model\": \"llama3-8b-8192\"},\n",
+    "            template=template,\n",
     "        )\n",
     "\n",
     "    def call(self, query):\n",
