--- a/tutorials/model_client.ipynb
+++ b/tutorials/model_client.ipynb
@@ -36,9 +36,9 @@
     "\n",
     "prompt = f\"User: {query}\\n\"\n",
     "model_kwargs = {\"model\": \"gpt-3.5-turbo\", \"temperature\": 0.5, \"max_tokens\": 100}\n",
-    "api_kwargs = openai_client.convert_inputs_to_api_kwargs(input=prompt, \n",
-    "                                                        model_kwargs=model_kwargs, \n",
-    "                                                        model_type=model_type)\n",
+    "api_kwargs = openai_client.convert_inputs_to_api_kwargs(\n",
+    "    input=prompt, model_kwargs=model_kwargs, model_type=model_type\n",
+    ")\n",
     "print(f\"api_kwargs: {api_kwargs}\")\n",
     "\n",
     "response = openai_client.call(api_kwargs=api_kwargs, model_type=model_type)\n",
@@ -49,15 +49,20 @@
     "model_type = ModelType.EMBEDDER\n",
     "# do batch embedding\n",
     "input = [query] * 2\n",
-    "model_kwargs = {\"model\": \"text-embedding-3-small\", \"dimensions\": 8, \"encoding_format\": \"float\"}\n",
-    "api_kwargs = openai_client.convert_inputs_to_api_kwargs(input=input, model_kwargs=model_kwargs, model_type=model_type)\n",
+    "model_kwargs = {\n",
+    "    \"model\": \"text-embedding-3-small\",\n",
+    "    \"dimensions\": 8,\n",
+    "    \"encoding_format\": \"float\",\n",
+    "}\n",
+    "api_kwargs = openai_client.convert_inputs_to_api_kwargs(\n",
+    "    input=input, model_kwargs=model_kwargs, model_type=model_type\n",
+    ")\n",
     "print(f\"api_kwargs: {api_kwargs}\")\n",
-    "\n",
     "\n",
     "\n",
     "response = openai_client.call(api_kwargs=api_kwargs, model_type=model_type)\n",
     "reponse_embedder_output = openai_client.parse_embedding_response(response)\n",
-    "print(f\"reponse_embedder_output: {reponse_embedder_output}\")\n"
+    "print(f\"reponse_embedder_output: {reponse_embedder_output}\")"
    ]
   },
   {
