--- a/tutorials/react_note.ipynb
+++ b/tutorials/react_note.ipynb
@@ -120,7 +120,7 @@
     "    test_react_agent(ModelClientType.OPENAI(), gpt_model_kwargs)\n",
     "    print(\"Done\")\n",
     "\n",
-    "    test_react_agent_use_examples(ModelClientType.GROQ(), llama3_model_kwargs)\n"
+    "    test_react_agent_use_examples(ModelClientType.GROQ(), llama3_model_kwargs)"
    ]
   },
   {
@@ -134,6 +134,7 @@
     "import asyncio\n",
     "import time\n",
     "\n",
+    "\n",
     "def is_running_in_event_loop() -> bool:\n",
     "    try:\n",
     "        loop = asyncio.get_running_loop()\n",
@@ -143,7 +144,8 @@
     "            return False\n",
     "    except RuntimeError:\n",
     "        return False\n",
-    "    \n",
+    "\n",
+    "\n",
     "def sync_func():\n",
     "    time.sleep(1)\n",
     "    print(\"Sync function\")\n",
