--- a/use_cases/generator/intermediate.ipynb
+++ b/use_cases/generator/intermediate.ipynb
@@ -30,7 +30,10 @@
     "from adalflow.core import Component, Generator, Sequential\n",
     "from adalflow.components.model_client import OpenAIClient\n",
     "from adalflow.components.model_client import GroqAPIClient\n",
-    "from adalflow.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY and GROQ_API_KEY\n",
+    "from adalflow.utils import (\n",
+    "    setup_env,\n",
+    ")  # make sure you have a .env file with OPENAI_API_KEY and GROQ_API_KEY\n",
+    "\n",
     "setup_env(\".env\")"
    ]
   },
@@ -72,6 +75,7 @@
    "source": [
     "# Let's turn on the library log to help with debugging.\n",
     "from adalflow.utils import get_logger\n",
+    "\n",
     "get_logger()"
    ]
   },
@@ -248,6 +252,8 @@
     "# Router component\n",
     "\n",
     "from typing import Dict\n",
+    "\n",
+    "\n",
     "class Router(Component):\n",
     "    def __init__(self, choices: Dict[str, str] = {}):\n",
     "        super().__init__()\n",
@@ -260,9 +266,9 @@
     "\n",
     "    def call(self, query: str) -> str:\n",
     "        prompt_kwargs = {\"input_str\": query, \"choices\": self.choices}\n",
-    "        choice =  self.router(prompt_kwargs=prompt_kwargs).data\n",
+    "        choice = self.router(prompt_kwargs=prompt_kwargs).data\n",
     "        return {\"choice\": choice, \"query\": query}\n",
-    "    \n",
+    "\n",
     "    def _extra_repr(self):\n",
     "        return f\"Choices: {self.choices}, \""
    ]
@@ -329,6 +335,7 @@
    "source": [
     "# the second chat component with two generators\n",
     "\n",
+    "\n",
     "class Chat(Component):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -342,6 +349,7 @@
     "            model_client=GroqAPIClient(),\n",
     "            model_kwargs={\"model\": \"llama3-8b-8192\"},\n",
     "        )\n",
+    "\n",
     "    # to chain together just to make sure the output can be directly passed to the next as input\n",
     "    def call(self, input: Dict[str, str]) -> Dict[str, str]:\n",
     "        choice = input.get(\"choice\", None)\n",
@@ -412,7 +420,9 @@
     "class QAWithRouter(Component):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.router = Router(choices={\"doctor\": \"Doctor\", \"lawyer\": \"Lawyer\", \"other\": \"Other\"})\n",
+    "        self.router = Router(\n",
+    "            choices={\"doctor\": \"Doctor\", \"lawyer\": \"Lawyer\", \"other\": \"Other\"}\n",
+    "        )\n",
     "        self.chat = Chat()\n",
     "        self.pipeline = Sequential(self.router, self.chat)\n",
     "\n",
