--- a/use_cases/question_answering/chatbot.ipynb
+++ b/use_cases/question_answering/chatbot.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
+    "\n",
     "!pip install -U adalflow[openai,groq,faiss-cpu]\n",
     "clear_output()"
    ]
@@ -37,7 +38,9 @@
     "from adalflow.core.component import Component\n",
     "from adalflow.core.generator import Generator\n",
     "from adalflow.components.memory.memory import Memory\n",
-    "from adalflow.components.model_client import OpenAIClient  # Here, we use the OpenAIClient as an example, but you can use any other clients (with the corresponding API Key as needed), such as AnthropicAPIClient"
+    "from adalflow.components.model_client import (\n",
+    "    OpenAIClient,\n",
+    ")  # Here, we use the OpenAIClient as an example, but you can use any other clients (with the corresponding API Key as needed), such as AnthropicAPIClient"
    ]
   },
   {
@@ -49,7 +52,7 @@
     "# Prompt user to enter their API keys securely\n",
     "openai_api_key = getpass(\"Please enter your OpenAI API key: \")\n",
     "# Set environment variables\n",
-    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
     "# Replace with your OpenAI API Key, or you can put it in a .env file"
    ]
   },
@@ -64,11 +67,10 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.generator = Generator(\n",
-    "            model_client=OpenAIClient(),\n",
-    "            model_kwargs={'model': 'gpt-4o-mini'}\n",
+    "            model_client=OpenAIClient(), model_kwargs={\"model\": \"gpt-4o-mini\"}\n",
     "        )\n",
-    "        self.chat_history = Memory() # Memory to store the chat history\n",
-    "    \n",
+    "        self.chat_history = Memory()  # Memory to store the chat history\n",
+    "\n",
     "    def call(self) -> str:\n",
     "        print(\"Welcome to the ChatBot. Type anything to chat. Type 'exit' to end.\")\n",
     "        while True:\n",
@@ -89,6 +91,7 @@
     "                user_query=user_input, assistant_response=response\n",
     "            )\n",
     "            print(f\"ChatBot: {response}\")\n",
+    "\n",
     "\n",
     "chatbot = ChatBot()\n",
     "print(chatbot)"
