--- a/use_cases/question_answering/simple_qa.ipynb
+++ b/use_cases/question_answering/simple_qa.ipynb
@@ -32,7 +32,10 @@
    "outputs": [],
    "source": [
     "# Here, we use the OpenAIClient as an example, but you can use any other clients (with the corresponding API Key as needed), such as AnthropicAPIClient\n",
-    "from adalflow.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY or any other key mentioned with respect to your usage\n",
+    "from adalflow.utils import (\n",
+    "    setup_env,\n",
+    ")  # make sure you have a .env file with OPENAI_API_KEY or any other key mentioned with respect to your usage\n",
+    "\n",
     "setup_env(\".env\")\n",
     "from adalflow.components.model_client import OpenAIClient"
    ]
@@ -119,12 +122,12 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.generator = Generator(\n",
-    "            model_client=OpenAIClient(),\n",
-    "            model_kwargs={'model': 'gpt-3.5-turbo'}\n",
+    "            model_client=OpenAIClient(), model_kwargs={\"model\": \"gpt-3.5-turbo\"}\n",
     "        )\n",
     "\n",
     "    def call(self, query: str):\n",
-    "        return self.generator.call(prompt_kwargs={'input_str': query})\n",
+    "        return self.generator.call(prompt_kwargs={\"input_str\": query})\n",
+    "\n",
     "\n",
     "simple_qa = SimpleQA()\n",
     "print(simple_qa)"
