--- a/tutorials/rag.ipynb
+++ b/tutorials/rag.ipynb
@@ -16,10 +16,11 @@
    "outputs": [],
    "source": [
     "# the data pipeline and the backend data processing\n",
-    "from adalflow.core.embedder import Embedder \n",
+    "from adalflow.core.embedder import Embedder\n",
     "from adalflow.core.types import ModelClientType\n",
     "from adalflow.components.data_process import TextSplitter, ToEmbeddings\n",
     "from adalflow.core.container import Sequential\n",
+    "\n",
     "\n",
     "def prepare_data_pipeline():\n",
     "    model_kwargs = {\n",
@@ -28,14 +29,12 @@
     "        \"encoding_format\": \"float\",\n",
     "    }\n",
     "\n",
-    "    splitter_config = {\n",
-    "        \"split_by\": \"word\",\n",
-    "        \"split_length\": 50,\n",
-    "        \"split_overlap\": 10\n",
-    "    }\n",
+    "    splitter_config = {\"split_by\": \"word\", \"split_length\": 50, \"split_overlap\": 10}\n",
     "\n",
     "    splitter = TextSplitter(**splitter_config)\n",
-    "    embedder = Embedder(model_client =ModelClientType.OPENAI(), model_kwargs=model_kwargs)\n",
+    "    embedder = Embedder(\n",
+    "        model_client=ModelClientType.OPENAI(), model_kwargs=model_kwargs\n",
+    "    )\n",
     "    embedder_transformer = ToEmbeddings(embedder, batch_size=2)\n",
     "    data_transformer = Sequential(splitter, embedder_transformer)\n",
     "    print(data_transformer)"
